Fix: Use OpenRouter embeddings (VoyageAI) + full-text fallback

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,13 @@ DB_HOST=localhost
 DB_USERNAME=myspot
 DB_PASSWORD=tu_password_aqui
 
+# OpenRouter (modelos + embeddings)
+OPENROUTER_API_KEY=tu_openrouter_api_key_aqui
+
 # OpenClaw Lite
 OPENCLAW_URL=http://localhost:3001
 OPENCLAW_API_KEY=myspot_secret_key
 
 # Rails
 RAILS_ENV=development
-RAILS_SECRET_KEY_base=genera_una_con_bin_rails_secret_key_base
+RAILS_SECRET_KEY_BASE=genera_una_con_bin_rails_secret_key_base
