Fix: Use Ollama local for embeddings (free, no tokens)

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ DB_HOST=localhost
 DB_USERNAME=myspot
 DB_PASSWORD=tu_password_aqui
 
-# OpenRouter (modelos + embeddings)
-OPENROUTER_API_KEY=tu_openrouter_api_key_aqui
+# Ollama (Embeddings locales - NO consume tokens)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_EMBED_MODEL=nomic-embed-text
 
 # OpenClaw Lite
 OPENCLAW_URL=http://localhost:3001
