--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,28 @@
 version: '3.8'
 
 services:
+  # Ollama para embeddings locales (GRATIS)
+  ollama:
+    image: ollama/ollama:latest
+    container_name: myspot-ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    environment:
+      OLLAMA_HOST: 0.0.0.0
+    deploy:
+      resources:
+        limits:
+          # Sin GPU: usar CPU mode
+          cpus: '2'
+          memory: 4G
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+
   # Base de datos PostgreSQL con pgvector
   postgres:
     image: pgvector/pgvector:pg15
@@ -45,40 +67,76 @@ services:
       DB_USERNAME: myspot
       DB_PASSWORD: myspot_password
       REDIS_URL: redis://redis:6379
-      OLLAMA_URL: http://host.docker.internal:11434
-      OPENCLAW_URL: http://host.docker.internal:3001
-      OPENCLAW_API_KEY: myspot_secret_key
+      OLLAMA_URL: http://ollama:11434
+      OLLAMA_EMBED_MODEL: nomic-embed-text
+      MYSPOT_URL: http://myspot:3000
+      MYSPOT_API_KEY: myspot_secret_key
       RAILS_ENV: development
     volumes:
       - .:/app
-      - ollama-cache:/root/.ollama
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      ollama:
+        condition: service_started
 
-  # OpenClaw Lite (Node.js)
-  openclaw-lite:
+  # MySpot Gateway (OpenClaw modificado)
+  # Este es el servicio que se conecta a los proveedores de API
+  myspot-gateway:
     image: node:22-alpine
-    container_name: myspot-openclaw
+    container_name: myspot-gateway
     working_dir: /app
     command: sh -c "npm install && npm run gateway start"
     ports:
       - "3001:3001"
     environment:
-      MYSPOT_ENABLED: "true"
+      MYSPOT_MODE: "true"
+      MYSPOT_NAME: "myspot"
       MYSPOT_API_URL: "http://myspot:3000"
       MYSPOT_API_KEY: "myspot_secret_key"
       DEFAULT_MODEL: "minimax/MiniMax-M2.5"
+      
+      # Features ACTIVOS
+      CHANNELS_TELEGRAM_ENABLED: "true"
+      CHANNELS_SIGNAL_ENABLED: "false"
+      CHANNELS_WHATSAPP_ENABLED: "false"
+      HEARTBEAT_ENABLED: "true"
+      CRON_ENABLED: "true"
+      
+      # Features DESACTIVADOS (no los necesitamos)
+      NODES_ENABLED: "false"
+      CANVAS_ENABLED: "false"
+      A2UI_ENABLED: "false"
+      
+      # Herramientas permitidas
+      TOOLS_ALLOWED: "exec,message,read,write,web_fetch,web_search,memory_get,memory_search,tts,image"
     volumes:
-      - ../openclaw:/app  # Montar desde el directorio de OpenClaw
+      - ../openclaw:/app  # Montar código de OpenClaw
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      - myspot
+
+  # Terminal/TUI (sesión interactiva)
+  # Esta permite conexión SSH para administración
+  terminal:
+    image: alpine:latest
+    container_name: myspot-terminal
+    command: tail -f /dev/null
+    volumes:
+      - ../openclaw:/app
+      - ssh_keys:/root/.ssh
+    networks:
+      - myspot_network
+
+networks:
+  myspot_network:
+    driver: bridge
 
 volumes:
   postgres_data:
   redis_data:
-  ollama-cache:
+  ollama_data:
+  ssh_keys:
